--- a/boilerplate/src/index.css
+++ b/boilerplate/src/index.css
@@ -1,19 +1,7 @@
 body {
 
     min-height: 100vh;
-    background-color: #ff00ff;
-    color: #00FF00;
-
-    /* Allow mouse dragging. */
-    -moz-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    -webkit-user-select: none;
-    user-select: none;
-
-    /* disable touch panning/zooming */
-    -ms-touch-action: none;
-    touch-action: none;
+    background-color: #darkgrey;
 
     /* Allow canvas to hit the edges of the browser viewport. */
     margin: 0;
