--- a/boilerplate/src/index.css
+++ b/boilerplate/src/index.css
@@ -1,9 +1,9 @@
 body {
-
-    min-height: 100vh;
-    background-color: #eeeef0;
-    margin: 0;
-    padding: 0;
+  font-family: "sans-serif";
+  min-height: 100vh;
+  background-color: #eeeef0;
+  margin: 0;
+  padding: 0;
 }
 .sidebar {
   width: 12% !important;
