--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ body {
 
 #menu {
   display: block;
-  width: 20%;
+  width: 30vw;
   background-color: #cdcdcf;
   border-radius: 10px;
   padding: 10px 30px 30px 30px;
